LAB | Numpy Deep Dive Solution

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np\n"
    ]
   },
   {
@@ -34,11 +35,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.26.4\n",
+      "Build Dependencies:\n",
+      "  blas:\n",
+      "    detection method: pkgconfig\n",
+      "    found: true\n",
+      "    include directory: C:/ProgramData/anaconda3/Library/include\n",
+      "    lib directory: C:/ProgramData/anaconda3/Library/lib\n",
+      "    name: mkl-sdl\n",
+      "    openblas configuration: unknown\n",
+      "    pc file directory: C:\\b\\abs_c1ywpu18ar\\croot\\numpy_and_numpy_base_1708638681471\\_h_env\\Library\\lib\\pkgconfig\n",
+      "    version: '2023.1'\n",
+      "  lapack:\n",
+      "    detection method: internal\n",
+      "    found: true\n",
+      "    include directory: unknown\n",
+      "    lib directory: unknown\n",
+      "    name: dep1583119523984\n",
+      "    openblas configuration: unknown\n",
+      "    pc file directory: unknown\n",
+      "    version: 1.26.4\n",
+      "Compilers:\n",
+      "  c:\n",
+      "    commands: cl.exe\n",
+      "    linker: link\n",
+      "    name: msvc\n",
+      "    version: 19.29.30154\n",
+      "  c++:\n",
+      "    commands: cl.exe\n",
+      "    linker: link\n",
+      "    name: msvc\n",
+      "    version: 19.29.30154\n",
+      "  cython:\n",
+      "    commands: cython\n",
+      "    linker: cython\n",
+      "    name: cython\n",
+      "    version: 3.0.8\n",
+      "Machine Information:\n",
+      "  build:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: windows\n",
+      "  host:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: windows\n",
+      "Python Information:\n",
+      "  path: C:\\b\\abs_c1ywpu18ar\\croot\\numpy_and_numpy_base_1708638681471\\_h_env\\python.exe\n",
+      "  version: '3.12'\n",
+      "SIMD Extensions:\n",
+      "  baseline:\n",
+      "  - SSE\n",
+      "  - SSE2\n",
+      "  - SSE3\n",
+      "  found:\n",
+      "  - SSSE3\n",
+      "  - SSE41\n",
+      "  - POPCNT\n",
+      "  - SSE42\n",
+      "  - AVX\n",
+      "  - F16C\n",
+      "  - FMA3\n",
+      "  - AVX2\n",
+      "  not found:\n",
+      "  - AVX512F\n",
+      "  - AVX512CD\n",
+      "  - AVX512_SKX\n",
+      "  - AVX512_CLX\n",
+      "  - AVX512_CNL\n",
+      "  - AVX512_ICL\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(np.__version__)\n",
+    "np.show_config()"
    ]
   },
   {
@@ -51,11 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "# a = np.random.random(size=(2,3,5))\n",
+    "# a = np.random.randint(1,100,size=(2,3,5)) # random integer from 1 to 100\n",
+    "a = np.random.rand(2,3,5)"
    ]
   },
   {
@@ -68,11 +153,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.87626532, 0.30140123, 0.52034905, 0.95784735, 0.0636006 ],\n",
+       "        [0.92211151, 0.58985708, 0.92458176, 0.65441748, 0.13166717],\n",
+       "        [0.03880952, 0.54416541, 0.44854759, 0.83871387, 0.59674343]],\n",
+       "\n",
+       "       [[0.14580653, 0.47899802, 0.08080715, 0.45439566, 0.28626968],\n",
+       "        [0.23116211, 0.17799256, 0.41032731, 0.64727982, 0.33145156],\n",
+       "        [0.79771503, 0.53526517, 0.80136672, 0.81377244, 0.11862269]]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a"
    ]
   },
   {
@@ -85,11 +188,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b = np.ones((5,2,3))"
    ]
   },
   {
@@ -102,11 +206,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b"
    ]
   },
   {
@@ -119,11 +248,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a shape: 30, b shape:30. equality test: True\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(f\"a shape: {a.size}, b shape:{b.size}. equality test: {a.size == b.size}\") # both of size 30!"
    ]
   },
   {
@@ -136,11 +274,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3,5) (5,2,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[21], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m### [your code here]\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m a \u001b[38;5;241m+\u001b[39m b\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3,5) (5,2,3) "
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a + b # Error! ValueError: operands could not be broadcast together with shapes (2,3,5) (5,2,3) \n",
+    "# For broadcasting to work,\n",
+    "# the shapes must be compatible from the rightmost dimension to the left,\n",
+    "# meaning dimensions should either be equal or one of them must be 1."
    ]
   },
   {
@@ -154,11 +308,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "c = b.transpose(1,2,0) # from the shape (5,3,2) swapping them to (2,3,5) to match \"a\" shape"
    ]
   },
   {
@@ -171,11 +326,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "d = a + c"
    ]
   },
   {
@@ -188,12 +344,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.87626532 0.30140123 0.52034905 0.95784735 0.0636006 ]\n",
+      "  [0.92211151 0.58985708 0.92458176 0.65441748 0.13166717]\n",
+      "  [0.03880952 0.54416541 0.44854759 0.83871387 0.59674343]]\n",
+      "\n",
+      " [[0.14580653 0.47899802 0.08080715 0.45439566 0.28626968]\n",
+      "  [0.23116211 0.17799256 0.41032731 0.64727982 0.33145156]\n",
+      "  [0.79771503 0.53526517 0.80136672 0.81377244 0.11862269]]]\n",
+      "[[[1.87626532 1.30140123 1.52034905 1.95784735 1.0636006 ]\n",
+      "  [1.92211151 1.58985708 1.92458176 1.65441748 1.13166717]\n",
+      "  [1.03880952 1.54416541 1.44854759 1.83871387 1.59674343]]\n",
+      "\n",
+      " [[1.14580653 1.47899802 1.08080715 1.45439566 1.28626968]\n",
+      "  [1.23116211 1.17799256 1.41032731 1.64727982 1.33145156]\n",
+      "  [1.79771503 1.53526517 1.80136672 1.81377244 1.11862269]]]\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "print(a)\n",
+    "print(d)\n",
+    "\n",
+    "# Both \"a\" and \"d\" have the exact shape. but in terms of values, all of \"d\" values are bigger by one than \"a\"\n",
+    "# and that's expected since we added to \"d\" the values of \"a\" + an array of ones."
    ]
   },
   {
@@ -206,11 +387,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "e = a * c"
    ]
   },
   {
@@ -224,12 +406,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ True,  True,  True,  True,  True],\n",
+       "        [ True,  True,  True,  True,  True],\n",
+       "        [ True,  True,  True,  True,  True]],\n",
+       "\n",
+       "       [[ True,  True,  True,  True,  True],\n",
+       "        [ True,  True,  True,  True,  True],\n",
+       "        [ True,  True,  True,  True,  True]]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "e == a # True of all values\n",
+    "# That's because we performed an element-wise multiplication by\n",
+    "# multiplying each \"a\" value to each corresponding \"c\" value and \"c\" is made out of ones\n",
+    "# so \"e\" equals \"a\"\n"
    ]
   },
   {
@@ -243,12 +445,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max=1.9578473454214573, Min=1.038809516378628, Mean=1.4906770267322749\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "d_max = d.max()\n",
+    "d_min = d.min()\n",
+    "d_mean = d.mean()\n",
+    "\n",
+    "print(f\"Max={d_max}, Min={d_min}, Mean={d_mean}\")\n"
    ]
   },
   {
@@ -261,11 +475,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "f = np.empty((2,3,5))"
    ]
   },
   {
@@ -287,11 +502,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 75.,  25.,  75., 100.,  25.],\n",
+       "        [ 75.,  75.,  75.,  75.,  25.],\n",
+       "        [  0.,  75.,  25.,  75.,  75.]],\n",
+       "\n",
+       "       [[ 25.,  25.,  25.,  25.,  25.],\n",
+       "        [ 25.,  25.,  25.,  75.,  25.],\n",
+       "        [ 75.,  75.,  75.,  75.,  25.]]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "# for x in range(f.shape[0]):\n",
+    "#     for y in range(f.shape[1]):\n",
+    "#         for z in range(f.shape[2]):\n",
+    "#             if d[x,y,z] == d_max:\n",
+    "#                 f[x,y,z] = 100\n",
+    "#             elif d[x,y,z] == d_min:\n",
+    "#                 f[x,y,z] = 0\n",
+    "#             elif d[x,y,z] > d_min and d[x,y,z] < d_mean:\n",
+    "#                 f[x,y,z] = 25\n",
+    "#             elif d[x,y,z] == d_mean:\n",
+    "#                 f[x,y,z] = 50\n",
+    "#             elif d[x,y,z] < d_max and d[x,y,z] > d_mean:\n",
+    "#                 f[x,y,z] = 75\n",
+    "# WOW, looks scary but works! \n",
+    "\n",
+    "# Found out about vectorized conditions using numpy\n",
+    "f[d == d_max] = 100\n",
+    "f[d == d_min] = 0\n",
+    "f[d == d_mean] = 50\n",
+    "f[(d > d_min) & (d < d_mean)] = 25\n",
+    "f[(d < d_max) & (d > d_mean)] = 75\n",
+    "\n",
+    "f"
    ]
   },
   {
@@ -325,11 +580,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.87626532 1.30140123 1.52034905 1.95784735 1.0636006 ]\n",
+      "  [1.92211151 1.58985708 1.92458176 1.65441748 1.13166717]\n",
+      "  [1.03880952 1.54416541 1.44854759 1.83871387 1.59674343]]\n",
+      "\n",
+      " [[1.14580653 1.47899802 1.08080715 1.45439566 1.28626968]\n",
+      "  [1.23116211 1.17799256 1.41032731 1.64727982 1.33145156]\n",
+      "  [1.79771503 1.53526517 1.80136672 1.81377244 1.11862269]]]\n",
+      "[[[ 75.  25.  75. 100.  25.]\n",
+      "  [ 75.  75.  75.  75.  25.]\n",
+      "  [  0.  75.  25.  75.  75.]]\n",
+      "\n",
+      " [[ 25.  25.  25.  25.  25.]\n",
+      "  [ 25.  25.  25.  75.  25.]\n",
+      "  [ 75.  75.  75.  75.  25.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(d)\n",
+    "print(f) # f values as expected!"
    ]
   },
   {
@@ -350,17 +628,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]"
+    "### [your code here]\n",
+    "g = np.empty((2,3,5),dtype=str)\n",
+    "\n",
+    "g[d == d_max] = \"A\"\n",
+    "g[d == d_min] = \"E\"\n",
+    "g[d == d_mean] = \"C\"\n",
+    "g[(d > d_min) & (d < d_mean)] = \"D\"\n",
+    "g[(d < d_max) & (d > d_mean)] = \"B\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[['B', 'D', 'B', 'A', 'D'],\n",
+       "        ['B', 'B', 'B', 'B', 'D'],\n",
+       "        ['E', 'B', 'D', 'B', 'B']],\n",
+       "\n",
+       "       [['D', 'D', 'D', 'D', 'D'],\n",
+       "        ['D', 'D', 'D', 'B', 'D'],\n",
+       "        ['B', 'B', 'B', 'B', 'D']]], dtype='<U1')"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +685,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
