Alrumaysaa Alghamdi - NumPy

--- a/main.ipynb
+++ b/main.ipynb
@@ -83,20 +83,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.6174168  0.36987327 0.06273261 0.83236178 0.95890509]\n",
-      "  [0.0572168  0.82133913 0.67059644 0.24443144 0.27534056]\n",
-      "  [0.89258598 0.08368677 0.88067512 0.00837481 0.08713378]]\n",
+      "[[[0.79511948 0.44706758 0.16610984 0.2469107  0.96045969]\n",
+      "  [0.28634539 0.4986157  0.56419897 0.36474554 0.17117913]\n",
+      "  [0.39808637 0.85567835 0.18894931 0.31618089 0.12548622]]\n",
       "\n",
-      " [[0.25958215 0.18685469 0.39343749 0.72599502 0.60991343]\n",
-      "  [0.85972163 0.40612638 0.92679753 0.73572581 0.61842923]\n",
-      "  [0.28312373 0.87526381 0.65151909 0.75538679 0.582185  ]]]\n"
+      " [[0.44920308 0.41552471 0.34880829 0.21458289 0.64806217]\n",
+      "  [0.69913553 0.40355148 0.90943298 0.75380114 0.0314747 ]\n",
+      "  [0.04811625 0.00949341 0.49230418 0.84144298 0.94690425]]]\n"
      ]
     }
    ],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -276,20 +276,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[1.6174168  1.36987327 1.06273261 1.83236178 1.95890509]\n",
-      "  [1.0572168  1.82133913 1.67059644 1.24443144 1.27534056]\n",
-      "  [1.89258598 1.08368677 1.88067512 1.00837481 1.08713378]]\n",
+      "[[[1.79511948 1.44706758 1.16610984 1.2469107  1.96045969]\n",
+      "  [1.28634539 1.4986157  1.56419897 1.36474554 1.17117913]\n",
+      "  [1.39808637 1.85567835 1.18894931 1.31618089 1.12548622]]\n",
       "\n",
-      " [[1.25958215 1.18685469 1.39343749 1.72599502 1.60991343]\n",
-      "  [1.85972163 1.40612638 1.92679753 1.73572581 1.61842923]\n",
-      "  [1.28312373 1.87526381 1.65151909 1.75538679 1.582185  ]]]\n"
+      " [[1.44920308 1.41552471 1.34880829 1.21458289 1.64806217]\n",
+      "  [1.69913553 1.40355148 1.90943298 1.75380114 1.0314747 ]\n",
+      "  [1.04811625 1.00949341 1.49230418 1.84144298 1.94690425]]]\n"
      ]
     }
    ],
@@ -310,28 +310,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a= [[[0.6174168  0.36987327 0.06273261 0.83236178 0.95890509]\n",
-      "  [0.0572168  0.82133913 0.67059644 0.24443144 0.27534056]\n",
-      "  [0.89258598 0.08368677 0.88067512 0.00837481 0.08713378]]\n",
+      "a= [[[0.79511948 0.44706758 0.16610984 0.2469107  0.96045969]\n",
+      "  [0.28634539 0.4986157  0.56419897 0.36474554 0.17117913]\n",
+      "  [0.39808637 0.85567835 0.18894931 0.31618089 0.12548622]]\n",
       "\n",
-      " [[0.25958215 0.18685469 0.39343749 0.72599502 0.60991343]\n",
-      "  [0.85972163 0.40612638 0.92679753 0.73572581 0.61842923]\n",
-      "  [0.28312373 0.87526381 0.65151909 0.75538679 0.582185  ]]] \n",
+      " [[0.44920308 0.41552471 0.34880829 0.21458289 0.64806217]\n",
+      "  [0.69913553 0.40355148 0.90943298 0.75380114 0.0314747 ]\n",
+      "  [0.04811625 0.00949341 0.49230418 0.84144298 0.94690425]]] \n",
       "\n",
-      "d= [[[1.6174168  1.36987327 1.06273261 1.83236178 1.95890509]\n",
-      "  [1.0572168  1.82133913 1.67059644 1.24443144 1.27534056]\n",
-      "  [1.89258598 1.08368677 1.88067512 1.00837481 1.08713378]]\n",
+      "d= [[[1.79511948 1.44706758 1.16610984 1.2469107  1.96045969]\n",
+      "  [1.28634539 1.4986157  1.56419897 1.36474554 1.17117913]\n",
+      "  [1.39808637 1.85567835 1.18894931 1.31618089 1.12548622]]\n",
       "\n",
-      " [[1.25958215 1.18685469 1.39343749 1.72599502 1.60991343]\n",
-      "  [1.85972163 1.40612638 1.92679753 1.73572581 1.61842923]\n",
-      "  [1.28312373 1.87526381 1.65151909 1.75538679 1.582185  ]]]\n"
+      " [[1.44920308 1.41552471 1.34880829 1.21458289 1.64806217]\n",
+      "  [1.69913553 1.40355148 1.90943298 1.75380114 1.0314747 ]\n",
+      "  [1.04811625 1.00949341 1.49230418 1.84144298 1.94690425]]]\n"
      ]
     }
    ],
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,20 +373,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.6174168  0.36987327 0.06273261 0.83236178 0.95890509]\n",
-      "  [0.0572168  0.82133913 0.67059644 0.24443144 0.27534056]\n",
-      "  [0.89258598 0.08368677 0.88067512 0.00837481 0.08713378]]\n",
+      "[[[0.79511948 0.44706758 0.16610984 0.2469107  0.96045969]\n",
+      "  [0.28634539 0.4986157  0.56419897 0.36474554 0.17117913]\n",
+      "  [0.39808637 0.85567835 0.18894931 0.31618089 0.12548622]]\n",
       "\n",
-      " [[0.25958215 0.18685469 0.39343749 0.72599502 0.60991343]\n",
-      "  [0.85972163 0.40612638 0.92679753 0.73572581 0.61842923]\n",
-      "  [0.28312373 0.87526381 0.65151909 0.75538679 0.582185  ]]]\n"
+      " [[0.44920308 0.41552471 0.34880829 0.21458289 0.64806217]\n",
+      "  [0.69913553 0.40355148 0.90943298 0.75380114 0.0314747 ]\n",
+      "  [0.04811625 0.00949341 0.49230418 0.84144298 0.94690425]]]\n"
      ]
     }
    ],
@@ -407,16 +407,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The max of d =1.9589050911634072\n",
-      "The min of d =1.0083748060084474\n",
-      "The mean of d =1.5244244046671276\n"
+      "The max of d =1.9604596861622823\n",
+      "The min of d =1.0094934070295352\n",
+      "The mean of d =1.4532323732305508\n"
      ]
     }
    ],
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,24 +467,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "### [your code here]\n",
     "# Iterate over all indices of d using np.ndindex\n",
-    "for idx in np.ndindex(d.shape):\n",
-    "    value = d[idx]\n",
-    "    if value == d_min:\n",
-    "        f[idx] = 0\n",
-    "    elif value == d_max:\n",
-    "        f[idx] = 100\n",
-    "    elif value == d_mean:\n",
-    "        f[idx] = 50\n",
-    "    elif d_min < value < d_mean:\n",
-    "        f[idx] = 25\n",
-    "    elif d_mean < value < d_max:\n",
-    "        f[idx] = 75\n"
+    "f[(d > d_min) & (d < d_mean)] = 25\n",
+    "f[(d > d_mean) & (d < d_max)] = 75\n",
+    "f[d == d_mean] = 50\n",
+    "f[d == d_min] = 0\n",
+    "f[d == d_max] = 100\n"
    ]
   },
   {
@@ -518,28 +511,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d= [[[1.6174168  1.36987327 1.06273261 1.83236178 1.95890509]\n",
-      "  [1.0572168  1.82133913 1.67059644 1.24443144 1.27534056]\n",
-      "  [1.89258598 1.08368677 1.88067512 1.00837481 1.08713378]]\n",
+      "d= [[[1.79511948 1.44706758 1.16610984 1.2469107  1.96045969]\n",
+      "  [1.28634539 1.4986157  1.56419897 1.36474554 1.17117913]\n",
+      "  [1.39808637 1.85567835 1.18894931 1.31618089 1.12548622]]\n",
       "\n",
-      " [[1.25958215 1.18685469 1.39343749 1.72599502 1.60991343]\n",
-      "  [1.85972163 1.40612638 1.92679753 1.73572581 1.61842923]\n",
-      "  [1.28312373 1.87526381 1.65151909 1.75538679 1.582185  ]]] \n",
+      " [[1.44920308 1.41552471 1.34880829 1.21458289 1.64806217]\n",
+      "  [1.69913553 1.40355148 1.90943298 1.75380114 1.0314747 ]\n",
+      "  [1.04811625 1.00949341 1.49230418 1.84144298 1.94690425]]] \n",
       "\n",
-      "f= [[[ 75.  25.  25.  75. 100.]\n",
+      "f= [[[ 75.  25.  25.  25. 100.]\n",
       "  [ 25.  75.  75.  25.  25.]\n",
-      "  [ 75.  25.  75.   0.  25.]]\n",
+      "  [ 25.  75.  25.  25.  25.]]\n",
       "\n",
-      " [[ 25.  25.  25.  75.  75.]\n",
-      "  [ 75.  25.  75.  75.  75.]\n",
-      "  [ 25.  75.  75.  75.  75.]]]\n"
+      " [[ 25.  25.  25.  25.  75.]\n",
+      "  [ 75.  25.  75.  75.  25.]\n",
+      "  [ 25.   0.  75.  75.  75.]]]\n"
      ]
     }
    ],
@@ -566,43 +559,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['D', 'B', 'B', 'D', 'E']\n",
+      "['D', 'B', 'B', 'B', 'E']\n",
       "['B', 'D', 'D', 'B', 'B']\n",
-      "['D', 'B', 'D', 'A', 'B']\n",
-      "['B', 'B', 'B', 'D', 'D']\n",
-      "['D', 'B', 'D', 'D', 'D']\n",
-      "['B', 'D', 'D', 'D', 'D']\n"
+      "['B', 'D', 'B', 'B', 'B']\n",
+      "['B', 'B', 'B', 'B', 'D']\n",
+      "['D', 'B', 'D', 'D', 'B']\n",
+      "['B', 'A', 'D', 'D', 'D']\n"
      ]
     }
    ],
    "source": [
     "### [your code here]\n",
-    "'''\n",
-    "f = np.empty(d.shape, dtype=object)  # Using dtype=object or dtype='<U1' for short strings\n",
     "\n",
-    "# Iterate over each element of d using np.ndindex\n",
-    "for idx in np.ndindex(d.shape):\n",
-    "    value = d[idx]\n",
-    "    if value == d_min:\n",
-    "        f[idx] = \"A\"\n",
-    "    elif value == d_max:\n",
-    "        f[idx] = \"E\"\n",
-    "    elif value == d_mean:\n",
-    "        f[idx] = \"C\"\n",
-    "    elif d_min < value < d_mean:\n",
-    "        f[idx] = \"B\"\n",
-    "    elif d_mean < value < d_max:\n",
-    "        f[idx] = \"D\"\n",
-    "\n",
-    "print(f)\n",
-    "'''\n",
     "# Create a new nested list f with the same structure as d.\n",
     "f = []\n",
     "for i in range(len(d)):           # iterate over the 2 blocks\n",
