--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "import numpy as np "
    ]
   },
   {
@@ -34,11 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.24.4\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(np.version.version)"
    ]
   },
   {
@@ -51,11 +59,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "a = np.random.randint( 5, size=(2,3,5))"
    ]
   },
   {
@@ -68,11 +76,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 3, 4, 3, 2],\n",
+       "        [3, 0, 2, 1, 1],\n",
+       "        [1, 1, 0, 2, 2]],\n",
+       "\n",
+       "       [[1, 1, 3, 3, 1],\n",
+       "        [4, 4, 2, 2, 3],\n",
+       "        [3, 2, 1, 0, 4]]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "a"
    ]
   },
   {
@@ -85,11 +110,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "b = np.ones((5,2,3),dtype = int)"
    ]
   },
   {
@@ -102,11 +127,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 1, 1],\n",
+       "        [1, 1, 1]],\n",
+       "\n",
+       "       [[1, 1, 1],\n",
+       "        [1, 1, 1]],\n",
+       "\n",
+       "       [[1, 1, 1],\n",
+       "        [1, 1, 1]],\n",
+       "\n",
+       "       [[1, 1, 1],\n",
+       "        [1, 1, 1]],\n",
+       "\n",
+       "       [[1, 1, 1],\n",
+       "        [1, 1, 1]]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "b"
    ]
   },
   {
@@ -119,11 +168,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "a.size == b.size"
    ]
   },
   {
@@ -136,11 +196,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "a + b \n",
+    "\n",
+    "# No, beacuse they are not in the same shape "
    ]
   },
   {
@@ -154,11 +216,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1, 1]],\n",
+       "\n",
+       "       [[1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1, 1]]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "c = np.transpose(b, axes=(1, 2, 0))\n",
+    "c\n"
    ]
   },
   {
@@ -171,11 +251,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[2, 4, 5, 4, 3],\n",
+       "        [4, 1, 3, 2, 2],\n",
+       "        [2, 2, 1, 3, 3]],\n",
+       "\n",
+       "       [[2, 2, 4, 4, 2],\n",
+       "        [5, 5, 3, 3, 4],\n",
+       "        [4, 3, 2, 1, 5]]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "d = a + c \n",
+    "d\n",
+    "# It works because they have tha same shape after we transpose it"
    ]
   },
   {
@@ -188,12 +287,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1 3 4 3 2]\n",
+      "  [3 0 2 1 1]\n",
+      "  [1 1 0 2 2]]\n",
+      "\n",
+      " [[1 1 3 3 1]\n",
+      "  [4 4 2 2 3]\n",
+      "  [3 2 1 0 4]]]\n",
+      "[[[2 4 5 4 3]\n",
+      "  [4 1 3 2 2]\n",
+      "  [2 2 1 3 3]]\n",
+      "\n",
+      " [[2 2 4 4 2]\n",
+      "  [5 5 3 3 4]\n",
+      "  [4 3 2 1 5]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "print(a)\n",
+    "print(d)\n",
+    "# The array d is the result of adding 1 to each element in the array a"
    ]
   },
   {
@@ -206,11 +327,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 3, 4, 3, 2],\n",
+       "        [3, 0, 2, 1, 1],\n",
+       "        [1, 1, 0, 2, 2]],\n",
+       "\n",
+       "       [[1, 1, 3, 3, 1],\n",
+       "        [4, 4, 2, 2, 3],\n",
+       "        [3, 2, 1, 0, 4]]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "e = a * c\n",
+    "e"
    ]
   },
   {
@@ -224,12 +363,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "np.array_equal(e, a)\n",
+    "# of couse equal because we multiply the same array to ones\n",
+    "# They have tha same shape and content "
    ]
   },
   {
@@ -243,12 +394,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 1 3.0\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "d_max = d.max()\n",
+    "d_min = d.min()\n",
+    "d_mean = d.mean()\n",
+    "print(d_max , d_min , d_mean)\n"
    ]
   },
   {
@@ -261,11 +422,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[None None None None None]\n",
+      "  [None None None None None]\n",
+      "  [None None None None None]]\n",
+      "\n",
+      " [[None None None None None]\n",
+      "  [None None None None None]\n",
+      "  [None None None None None]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "f = np.empty(d.shape, dtype=object)\n",
+    "print(f)"
    ]
   },
   {
@@ -287,11 +463,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "for i in range(len(d)):\n",
+    "    for j in range(len(d[i])):\n",
+    "        for k in range(len(d[i][j])):\n",
+    "            value = d[i][j][k]\n",
+    "            if value == d_min:\n",
+    "                f[i][j][k] = 0\n",
+    "            elif value == d_max:\n",
+    "                f[i][j][k] = 100\n",
+    "            elif value == d_mean:\n",
+    "                f[i][j][k] = 50\n",
+    "            elif d_min < value < d_mean:\n",
+    "                f[i][j][k] = 25\n",
+    "            elif d_mean < value < d_max:\n",
+    "                f[i][j][k] = 75\n"
    ]
   },
   {
@@ -325,11 +514,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[2 4 5 4 3]\n",
+      "  [4 1 3 2 2]\n",
+      "  [2 2 1 3 3]]\n",
+      "\n",
+      " [[2 2 4 4 2]\n",
+      "  [5 5 3 3 4]\n",
+      "  [4 3 2 1 5]]]\n",
+      "[[[25 75 100 75 50]\n",
+      "  [75 0 50 25 25]\n",
+      "  [25 25 0 50 50]]\n",
+      "\n",
+      " [[25 25 75 75 25]\n",
+      "  [100 100 50 50 75]\n",
+      "  [75 50 25 0 100]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(d)\n",
+    "print(f)"
    ]
   },
   {
@@ -350,11 +561,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[['B' 'D' 'E' 'D' 'C']\n",
+      "  ['D' 'A' 'C' 'B' 'B']\n",
+      "  ['B' 'B' 'A' 'C' 'C']]\n",
+      "\n",
+      " [['B' 'B' 'D' 'D' 'B']\n",
+      "  ['E' 'E' 'C' 'C' 'D']\n",
+      "  ['D' 'C' 'B' 'A' 'E']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]"
+    "for i in range(len(d)):\n",
+    "    for j in range(len(d[i])):\n",
+    "        for k in range(len(d[i][j])):\n",
+    "            value = d[i][j][k]\n",
+    "            if value == d_min:\n",
+    "                f[i][j][k] = 'A'\n",
+    "            elif value == d_max:\n",
+    "                f[i][j][k] = 'E'\n",
+    "            elif value == d_mean:\n",
+    "                f[i][j][k] = 'C'\n",
+    "            elif d_min < value < d_mean:\n",
+    "                f[i][j][k] = 'B'\n",
+    "            elif d_mean < value < d_max:\n",
+    "                f[i][j][k] = 'D'\n",
+    "\n",
+    "print(f) "
    ]
   }
  ],
@@ -374,7 +614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
