--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,11 +35,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.26.4\n",
+      "Build Dependencies:\n",
+      "  blas:\n",
+      "    detection method: pkgconfig\n",
+      "    found: true\n",
+      "    include directory: C:/Users/rkhm3/anaconda3/Library/include\n",
+      "    lib directory: C:/Users/rkhm3/anaconda3/Library/lib\n",
+      "    name: mkl-sdl\n",
+      "    openblas configuration: unknown\n",
+      "    pc file directory: C:\\b\\abs_c1ywpu18ar\\croot\\numpy_and_numpy_base_1708638681471\\_h_env\\Library\\lib\\pkgconfig\n",
+      "    version: '2023.1'\n",
+      "  lapack:\n",
+      "    detection method: internal\n",
+      "    found: true\n",
+      "    include directory: unknown\n",
+      "    lib directory: unknown\n",
+      "    name: dep1583119523984\n",
+      "    openblas configuration: unknown\n",
+      "    pc file directory: unknown\n",
+      "    version: 1.26.4\n",
+      "Compilers:\n",
+      "  c:\n",
+      "    commands: cl.exe\n",
+      "    linker: link\n",
+      "    name: msvc\n",
+      "    version: 19.29.30154\n",
+      "  c++:\n",
+      "    commands: cl.exe\n",
+      "    linker: link\n",
+      "    name: msvc\n",
+      "    version: 19.29.30154\n",
+      "  cython:\n",
+      "    commands: cython\n",
+      "    linker: cython\n",
+      "    name: cython\n",
+      "    version: 3.0.8\n",
+      "Machine Information:\n",
+      "  build:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: windows\n",
+      "  host:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: windows\n",
+      "Python Information:\n",
+      "  path: C:\\b\\abs_c1ywpu18ar\\croot\\numpy_and_numpy_base_1708638681471\\_h_env\\python.exe\n",
+      "  version: '3.12'\n",
+      "SIMD Extensions:\n",
+      "  baseline:\n",
+      "  - SSE\n",
+      "  - SSE2\n",
+      "  - SSE3\n",
+      "  found:\n",
+      "  - SSSE3\n",
+      "  - SSE41\n",
+      "  - POPCNT\n",
+      "  - SSE42\n",
+      "  - AVX\n",
+      "  - F16C\n",
+      "  - FMA3\n",
+      "  - AVX2\n",
+      "  - AVX512F\n",
+      "  - AVX512CD\n",
+      "  - AVX512_SKX\n",
+      "  - AVX512_CLX\n",
+      "  - AVX512_CNL\n",
+      "  - AVX512_ICL\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(np.__version__)\n",
+    "np.show_config()"
    ]
   },
   {
@@ -51,11 +132,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a = np.random.random(size=(2, 3, 5)) "
    ]
   },
   {
@@ -68,11 +150,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.62971224 0.89730071 0.35492579 0.4218182  0.87085444]\n",
+      "  [0.76594119 0.82154549 0.15170909 0.18721966 0.78316255]\n",
+      "  [0.424561   0.73728422 0.20746249 0.72274387 0.34622124]]\n",
+      "\n",
+      " [[0.25602177 0.26324516 0.50564498 0.03529049 0.32461571]\n",
+      "  [0.01439851 0.36996806 0.50957881 0.89648666 0.14316236]\n",
+      "  [0.00220158 0.08955834 0.35130022 0.16388627 0.68117168]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a)"
    ]
   },
   {
@@ -85,11 +182,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b = np.ones((5,2,3))"
    ]
   },
   {
@@ -102,11 +200,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]]])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b"
    ]
   },
   {
@@ -119,11 +242,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "a size is 30 and b size is 30\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a.size == b.size)\n",
+    "print(f\"a size is {a.size} and b size is {b.size}\")"
    ]
   },
   {
@@ -136,11 +270,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a and b could not be add together becouse there shapes dose not match.\n",
+      " a shape is (2, 3, 5), b shape is (5, 2, 3)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(f\"a and b could not be add together becouse there shapes dose not match.\\n a shape is {a.shape}, b shape is {b.shape}\")"
    ]
   },
   {
@@ -154,11 +298,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3, 5)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "c = np.transpose(b, (1,2,0))\n",
+    "c.shape"
    ]
   },
   {
@@ -171,11 +328,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.62971224 1.89730071 1.35492579 1.4218182  1.87085444]\n",
+      "  [1.76594119 1.82154549 1.15170909 1.18721966 1.78316255]\n",
+      "  [1.424561   1.73728422 1.20746249 1.72274387 1.34622124]]\n",
+      "\n",
+      " [[1.25602177 1.26324516 1.50564498 1.03529049 1.32461571]\n",
+      "  [1.01439851 1.36996806 1.50957881 1.89648666 1.14316236]\n",
+      "  [1.00220158 1.08955834 1.35130022 1.16388627 1.68117168]]]\n",
+      "We can add a and c becouse they have the same shape\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "d= a + c \n",
+    "print(d)\n",
+    "print(\"We can add a and c becouse they have the same shape\")"
    ]
   },
   {
@@ -188,12 +363,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.62971224 0.89730071 0.35492579 0.4218182  0.87085444]\n",
+      "  [0.76594119 0.82154549 0.15170909 0.18721966 0.78316255]\n",
+      "  [0.424561   0.73728422 0.20746249 0.72274387 0.34622124]]\n",
+      "\n",
+      " [[0.25602177 0.26324516 0.50564498 0.03529049 0.32461571]\n",
+      "  [0.01439851 0.36996806 0.50957881 0.89648666 0.14316236]\n",
+      "  [0.00220158 0.08955834 0.35130022 0.16388627 0.68117168]]]\n",
+      "[[[1.62971224 1.89730071 1.35492579 1.4218182  1.87085444]\n",
+      "  [1.76594119 1.82154549 1.15170909 1.18721966 1.78316255]\n",
+      "  [1.424561   1.73728422 1.20746249 1.72274387 1.34622124]]\n",
+      "\n",
+      " [[1.25602177 1.26324516 1.50564498 1.03529049 1.32461571]\n",
+      "  [1.01439851 1.36996806 1.50957881 1.89648666 1.14316236]\n",
+      "  [1.00220158 1.08955834 1.35130022 1.16388627 1.68117168]]]\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "print(a)\n",
+    "print(d)\n"
    ]
   },
   {
@@ -206,11 +403,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.62971224, 0.89730071, 0.35492579, 0.4218182 , 0.87085444],\n",
+       "        [0.76594119, 0.82154549, 0.15170909, 0.18721966, 0.78316255],\n",
+       "        [0.424561  , 0.73728422, 0.20746249, 0.72274387, 0.34622124]],\n",
+       "\n",
+       "       [[0.25602177, 0.26324516, 0.50564498, 0.03529049, 0.32461571],\n",
+       "        [0.01439851, 0.36996806, 0.50957881, 0.89648666, 0.14316236],\n",
+       "        [0.00220158, 0.08955834, 0.35130022, 0.16388627, 0.68117168]]])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "e = a * c\n",
+    "e"
    ]
   },
   {
@@ -224,12 +440,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]]\n",
+      "\n",
+      " [[ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]]]\n",
+      "True becouse they have the same values\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "print(e == a) \n",
+    "print(\"True becouse they have the same values\")"
    ]
   },
   {
@@ -243,12 +475,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.8973007146880128\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "d_max = np.max(d)\n",
+    "print(d_max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0022015791607208\n"
+     ]
+    }
+   ],
+   "source": [
+    "d_min = np.min(d) \n",
+    "print(d_min)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.430966425820721\n"
+     ]
+    }
+   ],
+   "source": [
+    "d_mean = np.mean(d)\n",
+    "print(d_mean)"
    ]
   },
   {
@@ -261,11 +538,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.62971224, 0.89730071, 0.35492579, 0.4218182 , 0.87085444],\n",
+       "        [0.76594119, 0.82154549, 0.15170909, 0.18721966, 0.78316255],\n",
+       "        [0.424561  , 0.73728422, 0.20746249, 0.72274387, 0.34622124]],\n",
+       "\n",
+       "       [[0.25602177, 0.26324516, 0.50564498, 0.03529049, 0.32461571],\n",
+       "        [0.01439851, 0.36996806, 0.50957881, 0.89648666, 0.14316236],\n",
+       "        [0.00220158, 0.08955834, 0.35130022, 0.16388627, 0.68117168]]])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "f = np.empty((2,3,5))\n",
+    "f"
    ]
   },
   {
@@ -287,11 +583,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 75. 100.  25.  25.  75.]\n",
+      "  [ 75.  75.  25.  25.  75.]\n",
+      "  [ 25.  75.  25.  75.  25.]]\n",
+      "\n",
+      " [[ 25.  25.  75.  25.  25.]\n",
+      "  [ 25.  25.  75.  75.  25.]\n",
+      "  [  0.  25.  25.  25.  75.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "for i in range(2):\n",
+    "    for j in range(3):\n",
+    "        for k in range(5):\n",
+    "            if d[i,j,k] > d_min and d[i,j,k] < d_mean:\n",
+    "                f[i,j,k] = 25\n",
+    "            elif d[i,j,k] > d_mean and d[i,j,k] < d_max:\n",
+    "                f[i,j,k] = 75\n",
+    "            elif d[i,j,k] == d_mean:\n",
+    "                f[i,j,k] = 50\n",
+    "            elif d[i,j,k] == d_min:\n",
+    "                f[i,j,k] = 0\n",
+    "            elif d[i,j,k] == d_max:\n",
+    "                f[i,j,k] = 100\n",
+    "            else:\n",
+    "                f[i,j,k] = d[i,j,k]\n",
+    "            \n",
+    "print(f)"
    ]
   },
   {
@@ -325,11 +652,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.62971224 1.89730071 1.35492579 1.4218182  1.87085444]\n",
+      "  [1.76594119 1.82154549 1.15170909 1.18721966 1.78316255]\n",
+      "  [1.424561   1.73728422 1.20746249 1.72274387 1.34622124]]\n",
+      "\n",
+      " [[1.25602177 1.26324516 1.50564498 1.03529049 1.32461571]\n",
+      "  [1.01439851 1.36996806 1.50957881 1.89648666 1.14316236]\n",
+      "  [1.00220158 1.08955834 1.35130022 1.16388627 1.68117168]]]\n",
+      "[[[ 75. 100.  25.  25.  75.]\n",
+      "  [ 75.  75.  25.  25.  75.]\n",
+      "  [ 25.  75.  25.  75.  25.]]\n",
+      "\n",
+      " [[ 25.  25.  75.  25.  25.]\n",
+      "  [ 25.  25.  75.  75.  25.]\n",
+      "  [  0.  25.  25.  25.  75.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(d)\n",
+    "print(f)"
    ]
   },
   {
@@ -350,17 +700,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[['D', 'E', 'B', 'B', 'D'],\n",
+       "        ['D', 'D', 'B', 'B', 'D'],\n",
+       "        ['B', 'D', 'B', 'D', 'B']],\n",
+       "\n",
+       "       [['B', 'B', 'D', 'B', 'B'],\n",
+       "        ['B', 'B', 'D', 'D', 'B'],\n",
+       "        ['A', 'B', 'B', 'B', 'D']]], dtype='<U1')"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "value_map = {0: 'A', 25: 'B', 50: 'C', 75: 'D', 100: 'E'}\n",
+    "\n",
+    "labeled_array = np.vectorize(value_map.get)(f)\n",
+    "labeled_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "### [your code here]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +751,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
