--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,11 +35,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.26.4\n",
+      "Build Dependencies:\n",
+      "  blas:\n",
+      "    detection method: pkgconfig\n",
+      "    found: true\n",
+      "    include directory: C:/Users/Lsula/anaconda3/Library/include\n",
+      "    lib directory: C:/Users/Lsula/anaconda3/Library/lib\n",
+      "    name: mkl-sdl\n",
+      "    openblas configuration: unknown\n",
+      "    pc file directory: C:\\b\\abs_c1ywpu18ar\\croot\\numpy_and_numpy_base_1708638681471\\_h_env\\Library\\lib\\pkgconfig\n",
+      "    version: '2023.1'\n",
+      "  lapack:\n",
+      "    detection method: internal\n",
+      "    found: true\n",
+      "    include directory: unknown\n",
+      "    lib directory: unknown\n",
+      "    name: dep1868282989520\n",
+      "    openblas configuration: unknown\n",
+      "    pc file directory: unknown\n",
+      "    version: 1.26.4\n",
+      "Compilers:\n",
+      "  c:\n",
+      "    commands: cl.exe\n",
+      "    linker: link\n",
+      "    name: msvc\n",
+      "    version: 19.29.30154\n",
+      "  c++:\n",
+      "    commands: cl.exe\n",
+      "    linker: link\n",
+      "    name: msvc\n",
+      "    version: 19.29.30154\n",
+      "  cython:\n",
+      "    commands: cython\n",
+      "    linker: cython\n",
+      "    name: cython\n",
+      "    version: 3.0.8\n",
+      "Machine Information:\n",
+      "  build:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: windows\n",
+      "  host:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: windows\n",
+      "Python Information:\n",
+      "  path: C:\\b\\abs_c1ywpu18ar\\croot\\numpy_and_numpy_base_1708638681471\\_h_env\\python.exe\n",
+      "  version: '3.11'\n",
+      "SIMD Extensions:\n",
+      "  baseline:\n",
+      "  - SSE\n",
+      "  - SSE2\n",
+      "  - SSE3\n",
+      "  found:\n",
+      "  - SSSE3\n",
+      "  - SSE41\n",
+      "  - POPCNT\n",
+      "  - SSE42\n",
+      "  - AVX\n",
+      "  - F16C\n",
+      "  - FMA3\n",
+      "  - AVX2\n",
+      "  not found:\n",
+      "  - AVX512F\n",
+      "  - AVX512CD\n",
+      "  - AVX512_SKX\n",
+      "  - AVX512_CLX\n",
+      "  - AVX512_CNL\n",
+      "  - AVX512_ICL\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(np.__version__)\n",
+    "np.show_config()"
    ]
   },
   {
@@ -51,11 +132,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3, 5)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 7, 14, 44, 30, 77],\n",
+       "        [82, 21, 24, 30, 41],\n",
+       "        [88, 33, 76, 42, 95]],\n",
+       "\n",
+       "       [[41, 14, 36, 55,  9],\n",
+       "        [89, 66, 18, 92, 17],\n",
+       "        [55, 61, 95, 51, 70]]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "# the first\n",
+    "# a = np.random.random((2,3,5))\n",
+    "\n",
+    "#the second\n",
+    "#a = np.random.random_sample((2, 3, 5))\n",
+    "\n",
+    "# the third\n",
+    "a = np.random.randint(100, size =(2, 3, 5))\n",
+    "\n",
+    "print(a.shape)\n",
+    "a\n"
    ]
   },
   {
@@ -68,11 +183,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 7 14 44 30 77]\n",
+      "  [82 21 24 30 41]\n",
+      "  [88 33 76 42 95]]\n",
+      "\n",
+      " [[41 14 36 55  9]\n",
+      "  [89 66 18 92 17]\n",
+      "  [55 61 95 51 70]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(a)\n",
+    "\n"
    ]
   },
   {
@@ -85,11 +215,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 2, 3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "b = np.ones((5, 2, 3))\n",
+    "print(b.shape)\n",
+    "b"
    ]
   },
   {
@@ -104,9 +267,30 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(b)\n"
    ]
   },
   {
@@ -119,11 +303,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes, a and b have the same size\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "if a.size ==b.size:\n",
+    "    print(\"Yes, a and b have the same size\")\n",
+    "else:\n",
+    "    print(\"No, a and b do not have the same size\")"
    ]
   },
   {
@@ -136,11 +331,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No, diffrent shapes\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "# they can be added if they have the same shape\n",
+    "if (a.shape ==b.shape):\n",
+    "    print(\"Yes, it can be added\")\n",
+    "else:\n",
+    "    print(\"No, diffrent shapes\")\n"
    ]
   },
   {
@@ -154,11 +361,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3, 5)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "#a.shape # 2, 3, 5\n",
+    "#b.shape # 5 ,2 ,3\n",
+    "c = np.transpose(b, (1, 2, 0)) # re arrnge the index of the axes\n",
+    "c.shape # should match a"
    ]
   },
   {
@@ -171,11 +392,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 8., 15., 45., 31., 78.],\n",
+       "        [83., 22., 25., 31., 42.],\n",
+       "        [89., 34., 77., 43., 96.]],\n",
+       "\n",
+       "       [[42., 15., 37., 56., 10.],\n",
+       "        [90., 67., 19., 93., 18.],\n",
+       "        [56., 62., 96., 52., 71.]]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "d = a + c\n",
+    "d\n",
+    "# it works because now they have the same shape"
    ]
   },
   {
@@ -188,12 +428,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array a\n",
+      ": [[[ 7 14 44 30 77]\n",
+      "  [82 21 24 30 41]\n",
+      "  [88 33 76 42 95]]\n",
+      "\n",
+      " [[41 14 36 55  9]\n",
+      "  [89 66 18 92 17]\n",
+      "  [55 61 95 51 70]]]\n",
+      "\n",
+      "\n",
+      "array d:\n",
+      " [[[ 8. 15. 45. 31. 78.]\n",
+      "  [83. 22. 25. 31. 42.]\n",
+      "  [89. 34. 77. 43. 96.]]\n",
+      "\n",
+      " [[42. 15. 37. 56. 10.]\n",
+      "  [90. 67. 19. 93. 18.]\n",
+      "  [56. 62. 96. 52. 71.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "print(\"array a\\n:\", a)\n",
+    "print(\"\\n\\narray d:\\n\", d)\n",
+    "\n",
+    "# the have the same shape, and each value in d = a value +1, which is logical beacuse array c was all ones\n",
+    "# we can say that array d is array a shifted by adding 1"
    ]
   },
   {
@@ -206,11 +474,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 7., 14., 44., 30., 77.],\n",
+       "        [82., 21., 24., 30., 41.],\n",
+       "        [88., 33., 76., 42., 95.]],\n",
+       "\n",
+       "       [[41., 14., 36., 55.,  9.],\n",
+       "        [89., 66., 18., 92., 17.],\n",
+       "        [55., 61., 95., 51., 70.]]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "e = a * c\n",
+    "e"
    ]
   },
   {
@@ -224,12 +510,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " a = e\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "\n",
+    "\n",
+    "if np.array_equal(a, e):\n",
+    "    print(\" a = e\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"a != e\")\n",
+    "    \n",
+    "# yes a = e, because each value of [a] was multiplied be the coordinater value in c which all = 1\n",
+    "# so a will remain the same\n"
    ]
   },
   {
@@ -250,6 +552,11 @@
     "### [your code here]\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -360,7 +667,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +681,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
