--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -145,16 +145,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[[ 7, 14, 44, 30, 77],\n",
-       "        [82, 21, 24, 30, 41],\n",
-       "        [88, 33, 76, 42, 95]],\n",
+       "array([[[28, 56, 63, 92, 70],\n",
+       "        [69, 76, 31, 18, 38],\n",
+       "        [46, 59, 47, 84, 40]],\n",
        "\n",
-       "       [[41, 14, 36, 55,  9],\n",
-       "        [89, 66, 18, 92, 17],\n",
-       "        [55, 61, 95, 51, 70]]])"
+       "       [[98, 13,  2, 98, 68],\n",
+       "        [70, 31,  1, 66,  7],\n",
+       "        [30, 69,  7, 65, 38]]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,20 +183,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[ 7 14 44 30 77]\n",
-      "  [82 21 24 30 41]\n",
-      "  [88 33 76 42 95]]\n",
+      "[[[28 56 63 92 70]\n",
+      "  [69 76 31 18 38]\n",
+      "  [46 59 47 84 40]]\n",
       "\n",
-      " [[41 14 36 55  9]\n",
-      "  [89 66 18 92 17]\n",
-      "  [55 61 95 51 70]]]\n"
+      " [[98 13  2 98 68]\n",
+      "  [70 31  1 66  7]\n",
+      "  [30 69  7 65 38]]]\n"
      ]
     }
    ],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "        [1., 1., 1.]]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
        "(2, 3, 5)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,22 +392,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[ 8., 15., 45., 31., 78.],\n",
-       "        [83., 22., 25., 31., 42.],\n",
-       "        [89., 34., 77., 43., 96.]],\n",
+       "array([[[29., 57., 64., 93., 71.],\n",
+       "        [70., 77., 32., 19., 39.],\n",
+       "        [47., 60., 48., 85., 41.]],\n",
        "\n",
-       "       [[42., 15., 37., 56., 10.],\n",
-       "        [90., 67., 19., 93., 18.],\n",
-       "        [56., 62., 96., 52., 71.]]])"
+       "       [[99., 14.,  3., 99., 69.],\n",
+       "        [71., 32.,  2., 67.,  8.],\n",
+       "        [31., 70.,  8., 66., 39.]]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -436,23 +436,23 @@
      "output_type": "stream",
      "text": [
       "array a\n",
-      ": [[[ 7 14 44 30 77]\n",
-      "  [82 21 24 30 41]\n",
-      "  [88 33 76 42 95]]\n",
+      ": [[[28 56 63 92 70]\n",
+      "  [69 76 31 18 38]\n",
+      "  [46 59 47 84 40]]\n",
       "\n",
-      " [[41 14 36 55  9]\n",
-      "  [89 66 18 92 17]\n",
-      "  [55 61 95 51 70]]]\n",
+      " [[98 13  2 98 68]\n",
+      "  [70 31  1 66  7]\n",
+      "  [30 69  7 65 38]]]\n",
       "\n",
       "\n",
       "array d:\n",
-      " [[[ 8. 15. 45. 31. 78.]\n",
-      "  [83. 22. 25. 31. 42.]\n",
-      "  [89. 34. 77. 43. 96.]]\n",
+      " [[[29. 57. 64. 93. 71.]\n",
+      "  [70. 77. 32. 19. 39.]\n",
+      "  [47. 60. 48. 85. 41.]]\n",
       "\n",
-      " [[42. 15. 37. 56. 10.]\n",
-      "  [90. 67. 19. 93. 18.]\n",
-      "  [56. 62. 96. 52. 71.]]]\n"
+      " [[99. 14.  3. 99. 69.]\n",
+      "  [71. 32.  2. 67.  8.]\n",
+      "  [31. 70.  8. 66. 39.]]]\n"
      ]
     }
    ],
@@ -474,22 +474,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[ 7., 14., 44., 30., 77.],\n",
-       "        [82., 21., 24., 30., 41.],\n",
-       "        [88., 33., 76., 42., 95.]],\n",
+       "array([[[28., 56., 63., 92., 70.],\n",
+       "        [69., 76., 31., 18., 38.],\n",
+       "        [46., 59., 47., 84., 40.]],\n",
        "\n",
-       "       [[41., 14., 36., 55.,  9.],\n",
-       "        [89., 66., 18., 92., 17.],\n",
-       "        [55., 61., 95., 51., 70.]]])"
+       "       [[98., 13.,  2., 98., 68.],\n",
+       "        [70., 31.,  1., 66.,  7.],\n",
+       "        [30., 69.,  7., 65., 38.]]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -545,11 +545,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99.0\n",
+      "2.0\n",
+      "50.333333333333336\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
+    "d_max = np.max(d)\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)\n",
+    "\n",
+    "print(d_max)\n",
+    "print(d_min)\n",
+    "print(d_mean)\n",
     "\n"
    ]
   },
@@ -568,11 +584,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[28., 56., 63., 92., 70.],\n",
+       "        [69., 76., 31., 18., 38.],\n",
+       "        [46., 59., 47., 84., 40.]],\n",
+       "\n",
+       "       [[98., 13.,  2., 98., 68.],\n",
+       "        [70., 31.,  1., 66.,  7.],\n",
+       "        [30., 69.,  7., 65., 38.]]])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "f = np.empty(d.shape)\n",
+    "f\n",
+    "#print(f.shape[0])"
    ]
   },
   {
@@ -582,11 +617,17 @@
     "\n",
     "\n",
     "\n",
-    "### 16. Populate the values in f. For each value in d, if it's larger than d_min but smaller than d_mean, assign 25 to the corresponding value in f.\n",
+    "### 16. Populate the values in f. \n",
+    "For each value in d, if it's larger than d_min but smaller than d_mean, assign 25 to the corresponding value in f.\n",
+    "\n",
     "If a value in d is larger than d_mean but smaller than d_max, assign 75 to the corresponding value in f.\n",
+    "\n",
     "If a value equals to d_mean, assign 50 to the corresponding value in f.\n",
+    "\n",
     "Assign 0 to the corresponding value(s) in f for d_min in d.\n",
+    "\n",
     "Assign 100 to the corresponding value(s) in f for d_max in d.\n",
+    "\n",
     "In the end, f should have only the following values: 0, 25, 50, 75, and 100.\n",
     "Note: you don't have to use Numpy in this question.\n",
     "\n"
@@ -594,11 +635,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 25.  75.  75.  75.  75.]\n",
+      "  [ 75.  75.  25.  25.  25.]\n",
+      "  [ 25.  75.  25.  75.  25.]]\n",
+      "\n",
+      " [[100.  25.  25. 100.  75.]\n",
+      "  [ 75.  25.   0.  75.  25.]\n",
+      "  [ 25.  75.  25.  75.  25.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "for k in range(d.shape[0]): # should use shape so we dont get out of range while using the loop var as index\n",
+    "    for j in range (d.shape[1]):\n",
+    "        for i in range (d.shape[2]):\n",
+    "            d_element = d[k,j,i]\n",
+    "            \n",
+    "            if  d_mean > d_element> d_min:\n",
+    "                f[k,j,i] = 25\n",
+    "                \n",
+    "            elif d_max > d_element> d_mean:\n",
+    "                f[k,j,i] = 75\n",
+    "                \n",
+    "            elif d_element == d_mean:\n",
+    "                f[k,j,i] = 50\n",
+    "                \n",
+    "            elif d_element == d_min:\n",
+    "                f[k,j,i] = 0\n",
+    "                \n",
+    "            else:# d_element == d_max\n",
+    "                f[k,j,i] = 100\n",
+    "            \n",
+    "        \n",
+    "print(f)\n"
    ]
   },
   {
@@ -632,11 +708,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array d\n",
+      ": [[[29. 57. 64. 93. 71.]\n",
+      "  [70. 77. 32. 19. 39.]\n",
+      "  [47. 60. 48. 85. 41.]]\n",
+      "\n",
+      " [[99. 14.  3. 99. 69.]\n",
+      "  [71. 32.  2. 67.  8.]\n",
+      "  [31. 70.  8. 66. 39.]]]\n",
+      "\n",
+      "max  99.0\n",
+      "min  2.0\n",
+      "mean  50.333333333333336\n",
+      "\n",
+      "\n",
+      "array f:\n",
+      " [[[ 25.  75.  75.  75.  75.]\n",
+      "  [ 75.  75.  25.  25.  25.]\n",
+      "  [ 25.  75.  25.  75.  25.]]\n",
+      "\n",
+      " [[100.  25.  25. 100.  75.]\n",
+      "  [ 75.  25.   0.  75.  25.]\n",
+      "  [ 25.  75.  25.  75.  25.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(\"array d\\n:\", d)\n",
+    "\n",
+    "print(\"\\nmax \", d_max)\n",
+    "print(\"min \",d_min)\n",
+    "print(\"mean \",d_mean)\n",
+    "\n",
+    "print(\"\\n\\narray f:\\n\", f)"
    ]
   },
   {
@@ -657,11 +768,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[['B' 'D' 'D' 'D' 'D']\n",
+      "  ['D' 'D' 'B' 'B' 'B']\n",
+      "  ['B' 'D' 'B' 'D' 'B']]\n",
+      "\n",
+      " [['E' 'B' 'B' 'E' 'D']\n",
+      "  ['D' 'B' 'A' 'D' 'B']\n",
+      "  ['B' 'D' 'B' 'D' 'B']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]"
+    "f = np.empty(d.shape)\n",
+    "f = f.astype(str)\n",
+    "#print(f)\n",
+    "\n",
+    "for k in range(d.shape[0]): # should use shape so we dont get out of range while using the loop var as index\n",
+    "    for j in range (d.shape[1]):\n",
+    "        for i in range (d.shape[2]):\n",
+    "            d_element = d[k,j,i]\n",
+    "            \n",
+    "            if  d_mean > d_element> d_min:\n",
+    "                f[k,j,i] = 'B'\n",
+    "                \n",
+    "            elif d_max > d_element> d_mean:\n",
+    "                f[k,j,i] = 'D'\n",
+    "                \n",
+    "            elif d_element == d_mean:\n",
+    "                f[k,j,i] = 'C'\n",
+    "                \n",
+    "            elif d_element == d_min:\n",
+    "                f[k,j,i] = 'A'\n",
+    "                \n",
+    "            else:# d_element == d_max\n",
+    "                f[k,j,i] = 'E'\n",
+    "            \n",
+    "        \n",
+    "print(f)\n"
    ]
   }
  ],
